--- a/docs/builders/bcc.mdx
+++ b/docs/builders/bcc.mdx
@@ -20,258 +20,23 @@ The following configuration options are available for building baidu cloud image
 
 ### Required:
 
-<!-- Code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; DO NOT EDIT MANUALLY -->
+@include 'builder/bcc/BaiduCloudAccessConfig-required.mdx'
 
-- `access_key` (string) - Baiducloud access key must be provided, unless the environment
-  variable `BAIDUCLOUD_ACCESS_KEY` is set
+@include 'builder/bcc/BaiduCloudRunConfig-required.mdx'
 
-- `secret_key` (string) - Baiducloud serect key must be provided, unless the environment
-  variable `BAIDUCLOUD_SECRET_KEY` is set
-
-- `region` (string) - Baiducloud region must be provided, unless the environment variable
-  `BAIDUCLOUD_REGION` is set.
-
-- `zone` (string) - The zone where your bcc instance will be launched. It must be set,
-  unless  the field `use_default_network` is set true,
-  which means you use the default network
-
-<!-- End of code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; -->
-
-
-<!-- Code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; DO NOT EDIT MANUALLY -->
-
-- `instance_spec` (string) - Type of the instance. For values, see the section [区域机型以及可选配置] of
-  website https://cloud.baidu.com/doc/BCC/s/6jwvyo0q2
-
-- `source_image_id` (string) - The base image id of Image you want to create
-  your customized image from
-
-<!-- End of code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; -->
-
-
-<!-- Code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; DO NOT EDIT MANUALLY -->
-
-- `image_name` (string) - The name you want to create your customize image,
-  it supports upper and lower case letters, numbers, Chinese
-  and -_/. special characters,
-  which must start with a letter and be 1-65 in length
-
-<!-- End of code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; -->
-
+@include 'builder/bcc/BaiduCloudImageConfig-required.mdx'
 
 ### Optional:
 
-<!-- Code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; DO NOT EDIT MANUALLY -->
+@include 'builder/bcc/BaiduCloudAccessConfig-not-required.mdx'
 
-- `skip_region_validation` (bool) - Do not check region and zone when validate
+@include 'builder/bcc/BaiduCloudRunConfig-not-required.mdx'
 
-<!-- End of code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; -->
-
-
-<!-- Code generated from the comments of the BaiduCloudDataDisk struct in builder/bcc/run_config.go; DO NOT EDIT MANUALLY -->
-
-- `cds_size_in_gb` (int) - Cds Size In GB
-
-- `storage_type` (string) - Storage Type
-
-- `snapshot_id` (string) - The snapshot id for cds data disk. The field must be specified
-  or the cds data disk will not be created
-
-<!-- End of code generated from the comments of the BaiduCloudDataDisk struct in builder/bcc/run_config.go; -->
-
-
-<!-- Code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; DO NOT EDIT MANUALLY -->
-
-- `associate_public_ip_address` (bool) - Whether allocate public ip(eip) to your instance.
-  Default value is false. If you set this field `true`,
-  please set the `network_capacity_in_mbps` field to allocate
-  public network bandwith
-
-- `use_default_network` (bool) - Use default vpc, subnet, securitygroup, if the field is set `true`.
-  if the field is set `false` or not set, the build process will use
-  a vpc, subnet, securitygroup that you offer or create a temporary vpc,
-  subnet, securitygroup, which will be deleted after building.
-
-- `instance_name` (string) - The name of instance which will be launch. Usually it will be deleted
-  after build, cancellation or error
-
-- `description` (string) - The description of instance
-
-- `security_group_id` (string) - ID of the security group to which a newly
-  created instance belongs. Mutual access is allowed between instances in one
-  security group. If not specified, the newly created instance will be added
-  to the default security group. If the default group doesn’t exist, or the
-  number of instances in it has reached the maximum limit, a new security
-  group will be created automatically.
-
-- `security_group_name` (string) - The security group name
-
-- `internet_charge_type` (string) - Internet charge type
-
-- `eip_name` (string) - Eip name
-
-- `network_capacity_in_mbps` (int) - Eip network bandwith
-
-- `root_disk_size_in_gb` (int) - RootDiskSizeInGb
-
-- `root_disk_storage_type` (string) - RootDiskStorageType
-
-- `vpc_id` (string) - The VPC id for your build process will perform in. If the field
-  `use_default_network` is used. This field will be invalid
-
-- `vpc_name` (string) - The VPC name. If the field `use_default_network` and `vpc_id`
-  both are unset, the build process will create a temporary
-  vpc network with the name of `vpc_name`
-
-- `vpc_cidr_block` (string) - Cidr block for VPC. If the temporary vpc network is created, the
-  `vpc_cidr_block` will be used to set cidr for vpc
-
-- `subnet_id` (string) - The id of subnet where the bcc instance will be launched on
-
-- `subnet_cidr_block` (string) - The cidr block of subnet which will be created
-  if subnet id is not specified
-
-- `subnet_name` (string) - The subnet name which will be created if subnet id is not specified
-
-- `keypair_id` (string) - Keypair id for ssh. baiducloud use keypair id as unique identification.
-  And maybe there more than one keypairs have the same name. So please
-  use `keypair_id` instead of `ssh_keypair_name`
-
-- `data_disks` ([]BaiduCloudDataDisk) - Add one or more data disks to the instance before creating the image.
-  The data disks allow for the following argument:
-  -  `storage_type` - Type of the data disk.
-  -  `cds_size_in_gb` - Size of the data disk.
-  -  `snapshot_id` - Id of the snapshot for a data disk.
-
-- `run_tags` (map[string]string) - Key/value pair tags to apply to the instance that is *launched*
-  to create the image.
-
-- `user_data` (string) - User data to apply when launching the instance.
-  It is often more convenient to use user_data_file, instead.
-  Packer will not automatically wait for a user script to finish before
-  shutting down the instance this must be handled in a provisioner.
-
-- `user_data_file` (string) - Path to a file that will be used for the user
-  data when launching the instance.
-
-<!-- End of code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; -->
-
-
-<!-- Code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; DO NOT EDIT MANUALLY -->
-
-- `image_copy_regions` ([]string) - Copy the custom image created by build steps to destination regions
-
-- `image_share_accounts` ([]string) - Account names of baiducloud to share images to, which
-  must be a baidu account
-
-- `image_share_account_ids` ([]string) - The account ids of baiducloud to share image
-
-- `skip_region_validation` (bool) - Do not check region and zone when validate
-
-- `skip_image_validation` (bool) - The image validation can be skipped if this value is true, the default
-  value is false.
-
-<!-- End of code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; -->
-
-
-<!-- Code generated from the comments of the SSHTemporaryKeyPair struct in communicator/config.go; DO NOT EDIT MANUALLY -->
-
-- `temporary_key_pair_type` (string) - `dsa` | `ecdsa` | `ed25519` | `rsa` ( the default )
-  
-  Specifies the type of key to create. The possible values are 'dsa',
-  'ecdsa', 'ed25519', or 'rsa'.
-
-- `temporary_key_pair_bits` (int) - Specifies the number of bits in the key to create. For RSA keys, the
-  minimum size is 1024 bits and the default is 4096 bits. Generally, 3072
-  bits is considered sufficient. DSA keys must be exactly 1024 bits as
-  specified by FIPS 186-2. For ECDSA keys, bits determines the key length
-  by selecting from one of three elliptic curve sizes: 256, 384 or 521
-  bits. Attempting to use bit lengths other than these three values for
-  ECDSA keys will fail. Ed25519 keys have a fixed length and bits will be
-  ignored.
-
-<!-- End of code generated from the comments of the SSHTemporaryKeyPair struct in communicator/config.go; -->
-
-
-- `ssh_keypair_name` (string) - If specified, this is the key that will be used for SSH with the
-  machine. The key must match a key pair name loaded up into the remote.
-  By default, this is blank, and Packer will generate a temporary keypair
-  unless [`ssh_password`](#ssh_password) is used.
-  [`ssh_private_key_file`](#ssh_private_key_file) or
-  [`ssh_agent_auth`](#ssh_agent_auth) must be specified when
-  [`ssh_keypair_name`](#ssh_keypair_name) is utilized.
-
-
-- `ssh_private_key_file` (string) - Path to a PEM encoded private key file to use to authenticate with SSH.
-  The `~` can be used in path and will be expanded to the home directory
-  of current user.
-
-
-- `ssh_agent_auth` (bool) - If true, the local SSH agent will be used to authenticate connections to
-  the source instance. No temporary keypair will be created, and the
-  values of [`ssh_password`](#ssh_password) and
-  [`ssh_private_key_file`](#ssh_private_key_file) will be ignored. The
-  environment variable `SSH_AUTH_SOCK` must be set for this option to work
-  properly.
-
-
-# Disk Devices Configuration:
-
-<!-- Code generated from the comments of the BaiduCloudDataDisk struct in builder/bcc/run_config.go; DO NOT EDIT MANUALLY -->
-
-- `cds_size_in_gb` (int) - Cds Size In GB
-
-- `storage_type` (string) - Storage Type
-
-- `snapshot_id` (string) - The snapshot id for cds data disk. The field must be specified
-  or the cds data disk will not be created
-
-<!-- End of code generated from the comments of the BaiduCloudDataDisk struct in builder/bcc/run_config.go; -->
-
+@include 'builder/bcc/BaiduCloudImageConfig-not-required.mdx'
 
 ## Basic Example
 
-Here is a basic example for Baiducloud.
-
-<Tabs>
-<Tab heading="JSON">
-
-```json
-{
-  "variables": {
-    "access_key": "{{env `BAIDUCLOUD_ACCESS_KEY`}}",
-    "secret_key": "{{env `BAIDUCLOUD_SECRET_KEY`}}"
-  },
-  "builders": [
-    {
-      "associate_public_ip_address": true,
-      "use_default_network": true,
-      "type": "baiducloud-bcc",
-      "access_key": "{{user `access_key`}}",
-      "secret_key": "{{user `secret_key`}}",
-      "region": "fwh",
-      "zone": "cn-fwh-a",
-      "image_name": "packer-test",
-      "source_image_id": "m-sDghxZu1",
-      "ssh_username": "root",
-      "instance_spec": "bcc.ic4.c2m2",
-      "temporary_key_pair_name": "packer-test",
-      "network_capacity_in_mbps": 1,
-      "root_disk_size_in_gb": 20,
-      "run_tags": {
-        "Managed by": "Packer",
-        "Built by": "Packer"
-      }
-    }
-  ],
-  "provisioners": [
-    {
-      "type": "shell",
-      "inline": ["sleep 30", "yum install redis.x86_64 -y"]
-    }
-  ]
-}
-```
+Here is a basic example for Baiducloud using the officially recommended HCL2 format.
 
 </Tab>
 <Tab heading="HCL2">
@@ -288,20 +53,17 @@ variable "secret_key" {
 }
 
 source "baiducloud-bcc" "example-1" {
-  associate_public_ip_address = true 
-  use_default_network = true 
-  source_image_id = "m-sDghxZu1"
-  region          = "fwh"
-  image_name      = "packer-test"
-  instance_spec   = "bcc.ic4.c2m2"
-  zone            = "cn-fwh-a"
   access_key      = "${var.access_key}"
   secret_key      = "${var.secret_key}"
-  network_capacity_in_mbps = 1
-  root_disk_size_in_gb = 20
-  ssh_username    = "root"
-  temporary_key_pair_name = "packer-test"
-  run_tags            = {
+  region          = "fwh"
+  zone            = "cn-fwh-a"
+  source_image_id = "m-sDghxZu1"
+  instance_spec   = "bcc.ic4.c2m2"
+  image_name      = "packer-test"
+  associate_public_ip_address = true 
+  use_default_network         = true 
+  ssh_username                = "root"
+  run_tags                    = {
     Managed_by = "Packer"
     Built_by   = "Packer"
   }
@@ -316,6 +78,84 @@ build {
       "yum install redis.x86_64 -y",
     ]
   }
+}
+```
+
+If you have set `BAIDUCLOUD_ACCESS_KEY` and `BAIDUCLOUD_SECRET_KEY` environment variables,
+You can also not set `access_key` and `secret_key` fields, 
+because the plug-in can automatically read environment variables.
+
+The example is blow.
+
+</Tab>
+<Tab heading="HCL2">
+
+```hcl
+source "baiducloud-bcc" "example-1" {
+  region          = "fwh"
+  zone            = "cn-fwh-a"
+  source_image_id = "m-sDghxZu1"
+  instance_spec   = "bcc.ic4.c2m2"
+  image_name      = "packer-test"
+  associate_public_ip_address = true 
+  use_default_network         = true 
+  ssh_username                = "root"
+  run_tags                    = {
+    Managed_by = "Packer"
+    Built_by   = "Packer"
+  }
+} 
+
+build {
+  sources = ["source.baiducloud-bcc.example-1"]
+  
+  provisioner "shell" {
+    inline = [
+      "Sleep 30",
+      "yum install redis.x86_64 -y",
+    ]
+  }
+}
+```
+
+You can also use the JSON format configuration file, although it is being deprecated.
+
+Here is a basic example for Baiducloud using JSON format.
+
+<Tabs>
+<Tab heading="JSON">
+
+```json
+{
+  "variables": {
+    "access_key": "{{env `BAIDUCLOUD_ACCESS_KEY`}}",
+    "secret_key": "{{env `BAIDUCLOUD_SECRET_KEY`}}"
+  },
+  "builders": [
+    {
+      "type": "baiducloud-bcc",
+      "access_key": "{{user `access_key`}}",
+      "secret_key": "{{user `secret_key`}}",
+      "region": "fwh",
+      "zone": "cn-fwh-a",
+      "source_image_id": "m-sDghxZu1",
+      "instance_spec": "bcc.ic4.c2m2",
+      "image_name": "packer-test",
+      "associate_public_ip_address": true,
+      "use_default_network": true,
+      "ssh_username": "root",
+      "run_tags": {
+        "Managed by": "Packer",
+        "Built by": "Packer"
+      }
+    }
+  ],
+  "provisioners": [
+    {
+      "type": "shell",
+      "inline": ["sleep 30", "yum install redis.x86_64 -y"]
+    }
+  ]
 }
 ```
 
