--- a/docs/builders/bcc.mdx
+++ b/docs/builders/bcc.mdx
@@ -20,19 +20,149 @@ The following configuration options are available for building baidu cloud image
 
 ### Required:
 
-@include 'builder/bcc/BaiduCloudAccessConfig-required.mdx'
+<!-- Code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; DO NOT EDIT MANUALLY -->
 
-@include 'builder/bcc/BaiduCloudRunConfig-required.mdx'
+- `access_key` (string) - Baiducloud access key must be provided, unless the environment
+  variable `BAIDUCLOUD_ACCESS_KEY` is set
 
-@include 'builder/bcc/BaiduCloudImageConfig-required.mdx'
+- `secret_key` (string) - Baiducloud serect key must be provided, unless the environment
+  variable `BAIDUCLOUD_SECRET_KEY` is set
+
+- `region` (string) - Baiducloud region must be provided, unless the environment variable
+  `BAIDUCLOUD_REGION` is set.
+
+- `zone` (string) - The zone where your bcc instance will be launched. It must be set,
+  unless  the field `use_default_network` is set true,
+  which means you use the default network
+
+<!-- End of code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; -->
+
+
+<!-- Code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; DO NOT EDIT MANUALLY -->
+
+- `instance_spec` (string) - Type of the instance. For values, see the section [区域机型以及可选配置] of
+  website https://cloud.baidu.com/doc/BCC/s/6jwvyo0q2
+
+- `source_image_id` (string) - The base image id of Image you want to create
+  your customized image from
+
+<!-- End of code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; -->
+
+
+<!-- Code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; DO NOT EDIT MANUALLY -->
+
+- `image_name` (string) - The name you want to create your customize image,
+  it supports upper and lower case letters, numbers, Chinese
+  and -_/. special characters,
+  which must start with a letter and be 1-65 in length
+
+<!-- End of code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; -->
+
 
 ### Optional:
 
-@include 'builder/bcc/BaiduCloudAccessConfig-not-required.mdx'
+<!-- Code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; DO NOT EDIT MANUALLY -->
 
-@include 'builder/bcc/BaiduCloudRunConfig-not-required.mdx'
+- `skip_region_validation` (bool) - Do not check region and zone when validate
 
-@include 'builder/bcc/BaiduCloudImageConfig-not-required.mdx'
+<!-- End of code generated from the comments of the BaiduCloudAccessConfig struct in builder/bcc/access_config.go; -->
+
+
+<!-- Code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; DO NOT EDIT MANUALLY -->
+
+- `associate_public_ip_address` (bool) - Whether allocate public ip(eip) to your instance.
+  Default value is false. If you set this field `true`,
+  please set the `network_capacity_in_mbps` field to allocate
+  public network bandwith
+
+- `use_default_network` (bool) - Use default vpc, subnet, securitygroup, if the field is set `true`.
+  if the field is set `false` or not set, the build process will use
+  a vpc, subnet, securitygroup that you offer or create a temporary vpc,
+  subnet, securitygroup, which will be deleted after building.
+
+- `instance_name` (string) - The name of instance which will be launch. Usually it will be deleted
+  after build, cancellation or error
+
+- `description` (string) - The description of instance
+
+- `security_group_id` (string) - ID of the security group to which a newly
+  created instance belongs. Mutual access is allowed between instances in one
+  security group. If not specified, the newly created instance will be added
+  to the default security group. If the default group doesn’t exist, or the
+  number of instances in it has reached the maximum limit, a new security
+  group will be created automatically.
+
+- `security_group_name` (string) - The security group name
+
+- `internet_charge_type` (string) - Internet charge type, there are two type: `BANDWIDTH_POSTPAID_BY_HOUR` and
+  `TRAFFIC_POSTPAID_BY_HOUR`.
+  The default type is `BANDWIDTH_POSTPAID_BY_HOUR`
+
+- `eip_name` (string) - Eip name
+
+- `network_capacity_in_mbps` (int) - Eip network bandwith
+
+- `root_disk_size_in_gb` (int) - RootDiskSizeInGb, if not provided, the default value is 20G
+
+- `root_disk_storage_type` (string) - RootDiskStorageType, if not provided, the default type is hp1
+
+- `vpc_id` (string) - The VPC id for your build process will perform in. If the field
+  `use_default_network` is used. This field will be invalid
+
+- `vpc_name` (string) - The VPC name. If the field `use_default_network` and `vpc_id`
+  both are unset, the build process will create a temporary
+  vpc network with the name of `vpc_name`
+
+- `vpc_cidr_block` (string) - Cidr block for VPC. If the temporary vpc network is created, the
+  `vpc_cidr_block` will be used to set cidr for vpc
+
+- `subnet_id` (string) - The id of subnet where the bcc instance will be launched on
+
+- `subnet_cidr_block` (string) - The cidr block of subnet which will be created
+  if subnet id is not specified
+
+- `subnet_name` (string) - The subnet name which will be created if subnet id is not specified
+
+- `keypair_id` (string) - Keypair id for ssh. baiducloud use keypair id as unique identification.
+  And maybe there more than one keypairs have the same name. So please
+  use `keypair_id` instead of `ssh_keypair_name`
+
+- `run_tags` (map[string]string) - Add one or more data disks to the instance before creating the image.
+  The data disks allow for the following argument:
+  -  `storage_type` - Type of the data disk.
+  -  `cds_size_in_gb` - Size of the data disk.
+  -  `snapshot_id` - Id of the snapshot for a data disk.
+  DataDisks []BaiduCloudDataDisk `mapstructure:"data_disks"`
+  Key/value pair tags to apply to the instance that is *launched*
+  to create the image.
+
+- `user_data` (string) - User data to apply when launching the instance.
+  It is often more convenient to use user_data_file, instead.
+  Packer will not automatically wait for a user script to finish before
+  shutting down the instance this must be handled in a provisioner.
+
+- `user_data_file` (string) - Path to a file that will be used for the user
+  data when launching the instance.
+
+<!-- End of code generated from the comments of the BaiduCloudRunConfig struct in builder/bcc/run_config.go; -->
+
+
+<!-- Code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; DO NOT EDIT MANUALLY -->
+
+- `image_copy_regions` ([]string) - Copy the custom image created by build steps to destination regions
+
+- `image_share_accounts` ([]string) - Account names of baiducloud to share images to, which
+  must be a baidu account
+
+- `image_share_account_ids` ([]string) - The account ids of baiducloud to share image
+
+- `skip_region_validation` (bool) - Do not check region and zone when validate
+
+- `skip_image_validation` (bool) - The image validation can be skipped if this value is true, the default
+  value is false.
+
+<!-- End of code generated from the comments of the BaiduCloudImageConfig struct in builder/bcc/image_config.go; -->
+
 
 ### Communicator Configuration
 
@@ -41,17 +171,176 @@ for this builder.
 
 #### Optional:
 
-@include 'packer-plugin-sdk/communicator/Config-not-required.mdx'
+<!-- Code generated from the comments of the Config struct in communicator/config.go; DO NOT EDIT MANUALLY -->
 
-@include 'packer-plugin-sdk/communicator/SSH-not-required.mdx'
+- `communicator` (string) - Packer currently supports three kinds of communicators:
+  
+  -   `none` - No communicator will be used. If this is set, most
+      provisioners also can't be used.
+  
+  -   `ssh` - An SSH connection will be established to the machine. This
+      is usually the default.
+  
+  -   `winrm` - A WinRM connection will be established.
+  
+  In addition to the above, some builders have custom communicators they
+  can use. For example, the Docker builder has a "docker" communicator
+  that uses `docker exec` and `docker cp` to execute scripts and copy
+  files.
 
-@include 'packer-plugin-sdk/communicator/SSHTemporaryKeyPair-not-required.mdx'
+- `pause_before_connecting` (duration string | ex: "1h5m2s") - We recommend that you enable SSH or WinRM as the very last step in your
+  guest's bootstrap script, but sometimes you may have a race condition
+  where you need Packer to wait before attempting to connect to your
+  guest.
+  
+  If you end up in this situation, you can use the template option
+  `pause_before_connecting`. By default, there is no pause. For example if
+  you set `pause_before_connecting` to `10m` Packer will check whether it
+  can connect, as normal. But once a connection attempt is successful, it
+  will disconnect and then wait 10 minutes before connecting to the guest
+  and beginning provisioning.
 
-@include 'packer-plugin-sdk/communicator/SSH-Key-Pair-Name-not-required.mdx'
+<!-- End of code generated from the comments of the Config struct in communicator/config.go; -->
 
-@include 'packer-plugin-sdk/communicator/SSH-Private-Key-File-not-required.mdx'
 
-@include 'packer-plugin-sdk/communicator/SSH-Agent-Auth-not-required.mdx'
+<!-- Code generated from the comments of the SSH struct in communicator/config.go; DO NOT EDIT MANUALLY -->
+
+- `ssh_host` (string) - The address to SSH to. This usually is automatically configured by the
+  builder.
+
+- `ssh_port` (int) - The port to connect to SSH. This defaults to `22`.
+
+- `ssh_username` (string) - The username to connect to SSH with. Required if using SSH.
+
+- `ssh_password` (string) - A plaintext password to use to authenticate with SSH.
+
+- `ssh_ciphers` ([]string) - This overrides the value of ciphers supported by default by golang.
+  The default value is [
+    "aes128-gcm@openssh.com",
+    "chacha20-poly1305@openssh.com",
+    "aes128-ctr", "aes192-ctr", "aes256-ctr",
+  ]
+  
+  Valid options for ciphers include:
+  "aes128-ctr", "aes192-ctr", "aes256-ctr", "aes128-gcm@openssh.com",
+  "chacha20-poly1305@openssh.com",
+  "arcfour256", "arcfour128", "arcfour", "aes128-cbc", "3des-cbc",
+
+- `ssh_clear_authorized_keys` (bool) - If true, Packer will attempt to remove its temporary key from
+  `~/.ssh/authorized_keys` and `/root/.ssh/authorized_keys`. This is a
+  mostly cosmetic option, since Packer will delete the temporary private
+  key from the host system regardless of whether this is set to true
+  (unless the user has set the `-debug` flag). Defaults to "false";
+  currently only works on guests with `sed` installed.
+
+- `ssh_key_exchange_algorithms` ([]string) - If set, Packer will override the value of key exchange (kex) altorighms
+  supported by default by golang. Acceptable values include:
+  "curve25519-sha256@libssh.org", "ecdh-sha2-nistp256",
+  "ecdh-sha2-nistp384", "ecdh-sha2-nistp521",
+  "diffie-hellman-group14-sha1", and "diffie-hellman-group1-sha1".
+
+- `ssh_certificate_file` (string) - Path to user certificate used to authenticate with SSH.
+  The `~` can be used in path and will be expanded to the
+  home directory of current user.
+
+- `ssh_pty` (bool) - If `true`, a PTY will be requested for the SSH connection. This defaults
+  to `false`.
+
+- `ssh_timeout` (duration string | ex: "1h5m2s") - The time to wait for SSH to become available. Packer uses this to
+  determine when the machine has booted so this is usually quite long.
+  Example value: `10m`.
+
+- `ssh_disable_agent_forwarding` (bool) - If true, SSH agent forwarding will be disabled. Defaults to `false`.
+
+- `ssh_handshake_attempts` (int) - The number of handshakes to attempt with SSH once it can connect. This
+  defaults to `10`.
+
+- `ssh_bastion_host` (string) - A bastion host to use for the actual SSH connection.
+
+- `ssh_bastion_port` (int) - The port of the bastion host. Defaults to `22`.
+
+- `ssh_bastion_agent_auth` (bool) - If `true`, the local SSH agent will be used to authenticate with the
+  bastion host. Defaults to `false`.
+
+- `ssh_bastion_username` (string) - The username to connect to the bastion host.
+
+- `ssh_bastion_password` (string) - The password to use to authenticate with the bastion host.
+
+- `ssh_bastion_interactive` (bool) - If `true`, the keyboard-interactive used to authenticate with bastion host.
+
+- `ssh_bastion_private_key_file` (string) - Path to a PEM encoded private key file to use to authenticate with the
+  bastion host. The `~` can be used in path and will be expanded to the
+  home directory of current user.
+
+- `ssh_bastion_certificate_file` (string) - Path to user certificate used to authenticate with bastion host.
+  The `~` can be used in path and will be expanded to the
+  home directory of current user.
+
+- `ssh_file_transfer_method` (string) - `scp` or `sftp` - How to transfer files, Secure copy (default) or SSH
+  File Transfer Protocol.
+
+- `ssh_proxy_host` (string) - A SOCKS proxy host to use for SSH connection
+
+- `ssh_proxy_port` (int) - A port of the SOCKS proxy. Defaults to `1080`.
+
+- `ssh_proxy_username` (string) - The optional username to authenticate with the proxy server.
+
+- `ssh_proxy_password` (string) - The optional password to use to authenticate with the proxy server.
+
+- `ssh_keep_alive_interval` (duration string | ex: "1h5m2s") - How often to send "keep alive" messages to the server. Set to a negative
+  value (`-1s`) to disable. Example value: `10s`. Defaults to `5s`.
+
+- `ssh_read_write_timeout` (duration string | ex: "1h5m2s") - The amount of time to wait for a remote command to end. This might be
+  useful if, for example, packer hangs on a connection after a reboot.
+  Example: `5m`. Disabled by default.
+
+- `ssh_remote_tunnels` ([]string) - 
+
+- `ssh_local_tunnels` ([]string) - 
+
+<!-- End of code generated from the comments of the SSH struct in communicator/config.go; -->
+
+
+<!-- Code generated from the comments of the SSHTemporaryKeyPair struct in communicator/config.go; DO NOT EDIT MANUALLY -->
+
+- `temporary_key_pair_type` (string) - `dsa` | `ecdsa` | `ed25519` | `rsa` ( the default )
+  
+  Specifies the type of key to create. The possible values are 'dsa',
+  'ecdsa', 'ed25519', or 'rsa'.
+
+- `temporary_key_pair_bits` (int) - Specifies the number of bits in the key to create. For RSA keys, the
+  minimum size is 1024 bits and the default is 4096 bits. Generally, 3072
+  bits is considered sufficient. DSA keys must be exactly 1024 bits as
+  specified by FIPS 186-2. For ECDSA keys, bits determines the key length
+  by selecting from one of three elliptic curve sizes: 256, 384 or 521
+  bits. Attempting to use bit lengths other than these three values for
+  ECDSA keys will fail. Ed25519 keys have a fixed length and bits will be
+  ignored.
+
+<!-- End of code generated from the comments of the SSHTemporaryKeyPair struct in communicator/config.go; -->
+
+
+- `ssh_keypair_name` (string) - If specified, this is the key that will be used for SSH with the
+  machine. The key must match a key pair name loaded up into the remote.
+  By default, this is blank, and Packer will generate a temporary keypair
+  unless [`ssh_password`](#ssh_password) is used.
+  [`ssh_private_key_file`](#ssh_private_key_file) or
+  [`ssh_agent_auth`](#ssh_agent_auth) must be specified when
+  [`ssh_keypair_name`](#ssh_keypair_name) is utilized.
+
+
+- `ssh_private_key_file` (string) - Path to a PEM encoded private key file to use to authenticate with SSH.
+  The `~` can be used in path and will be expanded to the home directory
+  of current user.
+
+
+- `ssh_agent_auth` (bool) - If true, the local SSH agent will be used to authenticate connections to
+  the source instance. No temporary keypair will be created, and the
+  values of [`ssh_password`](#ssh_password) and
+  [`ssh_private_key_file`](#ssh_private_key_file) will be ignored. The
+  environment variable `SSH_AUTH_SOCK` must be set for this option to work
+  properly.
+
 
 ## Basic Example
 
